Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.0
-
None
-
-
4bc3f700f (dev), 203f75c92 (6.6), b1e02458c (tqtc/lts-6.5)
-
2023wk48FOQtforAndroid
Description
tst_qfilesystemwatcher is not saving the tests result to an output file, even though the tests are output is visible in the logcat, then the androidtestrunner is not able to get that output result back on the host machine that started the tests.
cat: files/output.txt: No such file or directory
Attachments
Issue Links
- resulted from
-
QTBUG-98120 Fix failing qtbase CI tests for Android
-
- In Progress
-
-
QTBUG-87025 Report Android failing tests in CI
-
- Closed
-